--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # ----
 # Site
 
-title: Raileurope ERA API
+title: Rail Europe ERA API
 url: "https://rail-europe.github.io/era-api/"
 baseurl:
 google_analytics_key:
@@ -16,9 +16,9 @@ author:
   email:
   twitter: # twitter username without the @ symbol
 social:
-  name: Hydra Template
+  name: Rail Europe ERA API
   links:
-    - https://github.com/CloudCannon/hydra-jekyll-template
+    - https://rail-europe.github.io/era-api/
 
 # -----
 # Build
@@ -90,14 +90,6 @@ exclude:
 # CloudCannon
 
 social_icons:
-  - Facebook
-  - Google Plus
-  - Instagram
-  - LinkedIn
-  - Pinterest
-  - Tumblr
-  - Twitter
-  - YouTube
   - RSS
 
 _comments:
