updates marketing verbiage

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # ----
 # Site
 
-title: Rail Europe ERA API
+title: Rail Europe
 url: "https://rail-europe.github.io/era-api/"
 baseurl:
 google_analytics_key:
