new library postman

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,10 @@
   link: /blog/
   new_window: false
   highlight: false
+- name: Try out with Postman
+  link: downloads/Hands-on ERA API .postman_collection.json
+  new_window: true
+  highlight: false
 - name: Documentation
   link: https://era-dev.docs.stoplight.io
   new_window: true
