--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -4,6 +4,9 @@
   - name: Documentation
     link: https://era-dev.docs.stoplight.io
     new_window: true
+  - name: Try out
+    link: /postman
+    new_window: false
 - links:
   - name: RSS
     link: /feed.xml
