--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,6 +1,6 @@
 - links:
   - name: Releases
-    link: /blog/
+    link: /releases/
   - name: Documentation
     link: https://docs.era.raileurope.com
     new_window: true
