--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site
 
 title: Rail Europe
-url: "https://rail-europe.github.io/era-api"
+url: "https://rail-europe.github.io"
 baseurl: "/era-api"
 google_analytics_key:
 google_maps_javascript_api_key:
